tests/sources/invalid/declarations/const_missing_type.fire
// `const` modifier not followed by a recognized type token.
const foo;  //~ ERROR FS-PARSE-0010 @10
